# puddle

./: .gitignore  50-hid.rules  Cargo.toml  README.md
.cargo/: config.toml
debian/: puddle-rpi-stats.service  puddle.conf  puddle.service
docs/: design.md  hid_protocol.md  protocol.md  websocket_protocol.md
linmot/: Cargo.toml
linmot/src/: lib.rs  mci.rs  udp.rs
linmot/src/mci/: commands.rs  units.rs
linmot/src/udp/: reader.rs  writer.rs
src/: drive.rs  hid.rs  lib.rs  linmot.rs  main.rs  messages.rs  metrics.rs  reader.rs  websocket.rs  writer.rs
src/hid/: messages.rs  ui_manager.rs
src/linmot/: mci.rs  udp.rs
src/linmot/mci/: commands.rs  units.rs
