[package]
name = "puddle"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Linear servo drive controller"
publish = false

[package.metadata.deb]
maintainer = "Erin <fenbyfluid@gmail.com>"
maintainer-scripts = "debian/"
systemd-units = { enable = false, start = false }
assets = [
    "$auto",
    ["debian/puddle.udev", "lib/udev/rules.d/60-puddle.rules", "644"],
    ["debian/puddle.conf", "etc/systemd/system/puddle.service.d/override.conf", "644"],
]

[features]
default = ["hidapi"]

[dependencies]
anyhow = { version = "1.0.101", features = ["backtrace"] }
bitflags = { version = "2.10.0" }
clap = { version = "4.5.53", features = ["derive"] }
hidapi = { version = "2.6.3", features = ["macos-shared-device"], optional = true }
