[package]
name = "puddle"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
description = "Linear servo drive controller"
publish = false
default-run = "puddle"

[workspace]

[package.metadata.deb]
maintainer = "Erin <fenbyfluid@gmail.com>"
maintainer-scripts = "debian/"
systemd-units = [
    { enable = false, start = false },
    { unit-name = "puddle-rpi-stats", enable = false, start = false },
]
assets = [
    "$auto",
    ["debian/puddle.udev", "lib/udev/rules.d/60-puddle.rules", "644"],
    ["debian/puddle.conf", "etc/systemd/system/puddle.service.d/override.conf", "644"],
]

[dependencies]
linmot = { path = "linmot", features = ["serde"] }
anyhow = { version = "1.0.101", features = ["backtrace"] }
clap = { version = "4.5.53", features = ["derive"] }
core_affinity = { version = "0.8.3" }
env_logger = { version = "0.11.9" }
hidapi = { version = "2.6.3", features = ["macos-shared-device"] }
log = { version = "0.4.29" }
mio = { version = "1.0.3", features = ["net", "os-poll"] }
questdb-rs = { version = "5.0.0", default-features = false, features = ["ring-crypto", "tls-native-certs", "sync-sender-tcp"] }
ratatui = { version = "0.29.0" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149" }
signal-hook = { version = "0.4.3" }
thread-priority = { version = "3.0.0" }
tungstenite = { version = "0.29.0" }

[dev-dependencies]
ts-rs = { version = "12.0.1" }
